finished header, here and about

--- a/src/components/css/about.css
+++ b/src/components/css/about.css
@@ -76,7 +76,7 @@
     font-size: 2rem;
   }
   .about-technologies-container {
-    margin-block-start: 5rem;
+    margin-block-start: 1rem;
     grid-template-columns: repeat(4, 1fr);
     align-items: center;
   }
@@ -89,5 +89,8 @@
 @media only screen and (max-width: 340px) {
   .about-title {
     margin-block-start: 0;
+  }
+  .about-description {
+    margin: 0% 7% 0 7%;
   }
 }
