--- a/src/components/css/hero.css
+++ b/src/components/css/hero.css
@@ -1,3 +1,6 @@
+.hero {
+  grid-row: 2 span 1;
+}
 .custom-shape-divider-bottom-1632433472 {
   position: absolute;
   bottom: 0;
@@ -150,7 +153,7 @@
   width: 100%;
 }
 
-.hero-subcontainer {
+.hero-subContainer {
   display: flex;
   height: 50vh;
   flex-direction: column;
