--- a/src/components/css/about.css
+++ b/src/components/css/about.css
@@ -47,7 +47,10 @@
   grid-template-columns: repeat(8, 1fr);
   align-items: center;
 }
-@media only screen and (max-width: 990px) {
+@media only screen and (max-width: 768px) {
+  .about-title {
+    margin-block-start: 0rem;
+  }
   .about-technologies-img {
     width: 5rem;
     /* height: 20%; */
