--- a/src/components/css/contact.css
+++ b/src/components/css/contact.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* height: 100vh; */
+  height: 80vh;
 }
 .contact-form {
   display: flex;
@@ -42,7 +42,7 @@
     width: 86%;
   }
   .contact {
-    margin-block-start: -40rem;
+    /* margin-block-start: -40rem; */
   }
 }
 @media only screen and (max-width: 460px) {
